syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.yt8492.krotosample.protobuf";
option java_outer_classname = "KrotoSample";

package api;

message MessageRequest {
    string message = 1;
}

message MessageResponse {
    string message = 1;
}

message Empty {}

service MessageService {
    rpc BidirectionalStream (stream MessageRequest) returns (stream MessageResponse);
    rpc ClientStream(stream MessageRequest) returns (MessageResponse);
    rpc ServerStream(MessageRequest) returns (stream MessageResponse);
    rpc HealthCheck (Empty) returns (Empty);
}